--- a/sample/e.db(list)/styles.css
+++ b/sample/e.db(list)/styles.css
@@ -1,6 +1,6 @@
-/*! jQuery v3.2.1 | (c) JS Foundation and other contributors | jquery.org/license */
 * {
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    /* make transparent link selection, adjust last value opacity 0 to 1.0 */
     color: #444;
     outline: none;
     font-family: 'Century Gothic';
@@ -8,66 +8,71 @@
     padding: 0;
 }
 
+body {
+    padding: 0 20%;
+}
+
 /* Styling the scroll-bar */
 /* width */
 ::-webkit-scrollbar {
-	width: 8px;
-    
+    width: 8px;
+
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background: #f1f1f1;
-    
+    background: #f1f1f1;
+
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: #888;
+    background: #888;
     border-radius: 3px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: #555;
+    background: #555;
 }
+
 /* Styling the scroll-bar */
 
 /* Global Shared Classes */
 
-.display-inline{
+.display-inline {
     display: inline-block;
 }
 
-#main-div-container{
+#main-div-container {
     margin: 3% 15% 1% 15%;
     padding: 3% 5% 1% 5%;
     box-shadow: 0px 0px 2px #cecece;
     border-radius: 6px;
 }
 
-.display-none{
+.display-none {
     display: none;
 }
 
-.middle-align{
+.middle-align {
     vertical-align: middle;
 }
 
 /* End Global Shared Classes */
 
-.header-top-bar{
+.header-top-bar {
     display: flex;
     background-color: #fbfbfb;
     padding: 12px;
 }
 
-.header-logo{
+.header-logo {
     padding: 10px 20px;
     margin-left: 5%;
 }
 
-.header-menu{
+.header-menu {
     flex: 1;
     margin-top: 1.2%;
     padding: 0;
@@ -75,36 +80,36 @@
     margin-right: 5%;
 }
 
-.header-menu ul{
+.header-menu ul {
     list-style: none;
 }
 
-.header-menu span{
+.header-menu span {
     cursor: pointer;
 }
 
-.header-menu ul li{
+.header-menu ul li {
     padding: 8px 16px;
     display: inline-block;
     cursor: pointer;
 }
 
-.header-menu ul li:hover{
+.header-menu ul li:hover {
     color: #22aa11;
     transition: color 0.7s ease;
 }
 
-.header-logo h3{
+.header-logo h3 {
     font-size: 24pt;
     margin: 0;
     padding: 0;
 }
 
-.header-logo h3:nth-child(2){
+.header-logo h3:nth-child(2) {
     color: #22aa11;
 }
 
-.header-banner{
+.header-banner {
     width: 100%;
     height: 87.5vh;
     background-image: url('../img/bg_img.png');
@@ -112,7 +117,7 @@
     display: flex;
 }
 
-.header-search-container{
+.header-search-container {
     margin: auto;
     box-shadow: 0px 0px 2px #ccc;
     -webkit-box-shadow: 0px 0px 2px #ccc;
@@ -125,30 +130,30 @@
     position: relative;
 }
 
-.header-search-container label, 
-.header-search-container i{
+.header-search-container label,
+.header-search-container i {
     padding: 0 5px;
 }
 
-.header-search-container i{
+.header-search-container i {
     padding-right: 10px;
 }
 
-.header-search-container input[type="text"]{
+.header-search-container input[type="text"] {
     border: none;
     width: 500px;
     padding: 10px 8px;
     font-size: 12pt;
 }
 
-.header-search-container img{
+.header-search-container img {
     position: absolute;
     top: 10px;
     right: 10px;
     height: 20px;
 }
 
-.body-item{
+.body-item {
     background-color: #fbfbfb;
     box-shadow: 0 0 1.5px #ccc;
     margin: 5px 8px;
@@ -157,32 +162,33 @@
     max-height: 230px;
 }
 
-.body-item .item-header{
+.body-item .item-header {
     font-size: 10pt;
     padding-top: 8px;
 }
 
-.body-item .item-body img{
+.body-item .item-body img {
     height: 120px;
 }
 
-.body-item .item-footer{
+.body-item .item-footer {
     height: 80px;
     text-align: left;
     font-size: 10pt;
 }
 
-.body-item .item-footer p, .body-item .item-footer label{
+.body-item .item-footer p,
+.body-item .item-footer label {
     padding: 0 4px
 }
 
-.body-item .item-footer p{
+.body-item .item-footer p {
     height: 25px;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-.body-item .item-footer button{
+.body-item .item-footer button {
     width: 100%;
     margin: 4px 0;
     padding: 2px 0;
@@ -192,11 +198,11 @@
     cursor: pointer;
 }
 
-button:active{
+button:active {
     opacity: .8;
 }
 
-h4{
+h4 {
     text-align: center;
     margin: 20px 0;
     font-size: 16pt;
@@ -205,18 +211,18 @@ h4{
 
 /* Farmacy and Medice */
 
-.splited{
+.splited {
     display: flex;
     width: 100%;
     height: 100vh;
 }
 
-.desc-left{
+.desc-left {
     flex: 1;
     overflow-y: auto;
 }
 
-.desc-right{
+.desc-right {
     flex: 2;
     background-color: #ddd;
 }
@@ -226,40 +232,40 @@ h4{
     margin-top: 10px;
 }
 
-.desc-left-img img{
+.desc-left-img img {
     max-height: 150px;
 }
 
-.obj-info{
+.obj-info {
     display: flex;
 }
 
-.obj-info div{
+.obj-info div {
     margin: 0 5px;
     padding: 5px;
 }
 
-.obj-description{
+.obj-description {
     padding: 15px;
 }
 
-.obj-description p{
+.obj-description p {
     margin-top: 10px;
     font-size: 11pt;
     text-align: justify;
 }
 
-.obj-info-header{
+.obj-info-header {
     margin-top: 10px;
     font-weight: 600;
 }
 
-.function-button{
+.function-button {
     display: flex;
     padding: 5px;
 }
 
-.function-button button{
+.function-button button {
     flex: 1;
     margin: 4px 5px;
     padding: 8px 0;
@@ -269,23 +275,23 @@ h4{
     cursor: pointer;
 }
 
-.function-button button:nth-child(1){
+.function-button button:nth-child(1) {
     background-color: #3c3;
 }
 
 /* Modal */
 
-.background-modal{
+.background-modal {
     position: absolute;
     top: 0;
     right: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(100,100,100,0.6);
+    background-color: rgba(100, 100, 100, 0.6);
     display: flex;
 }
 
-.m-modal{
+.m-modal {
     background-color: #fefefe;
     margin: auto;
     border-radius: 4px;
@@ -293,13 +299,13 @@ h4{
     width: 480px;
 }
 
-.modal-control{
+.modal-control {
     margin: 8px 0;
 }
 
-input, 
-select, 
-textarea{
+input,
+select,
+textarea {
     border: 1px solid #bbb;
     border-radius: 3px;
     resize: none;
@@ -309,15 +315,15 @@ textarea{
     font-size: 11pt;
 }
 
-.close{
+.close {
     color: #b23;
 }
 
-.modal-control-button{
+.modal-control-button {
     display: flex;
 }
 
-.modal-control-button button{
+.modal-control-button button {
     flex: 1;
     padding: 8px 0;
     border: 1px solid rgba(0, 0, 0, 0);
@@ -327,71 +333,72 @@ textarea{
     border-radius: 3px;
 }
 
-.modal-control-button button:nth-child(1){
+.modal-control-button button:nth-child(1) {
     background-color: #3c3;
     margin-right: 2px;
 }
 
-.modal-control-button button:nth-child(3){
+.modal-control-button button:nth-child(3) {
     color: #fff;
     background-color: rgb(233, 63, 77);
     margin-left: 2px;
 }
 
-.modal-control-button button:nth-child(1):hover{
+.modal-control-button button:nth-child(1):hover {
     color: #3c3;
     border: 1px solid #3c3;
     background-color: #fff;
-    transition: all 0.3s;  
+    transition: all 0.3s;
 }
 
-.modal-control-button button:nth-child(2):hover{
+.modal-control-button button:nth-child(2):hover {
     color: rgb(64, 63, 77);
     border: 1px solid rgb(77, 63, 77);
     background-color: #fff;
-    transition: all 0.3s;  
+    transition: all 0.3s;
 }
 
-.modal-control-button button:nth-child(3):hover{
+.modal-control-button button:nth-child(3):hover {
     color: rgb(233, 63, 77);
     border: 1px solid rgb(233, 63, 77);
     background-color: #fff;
-    transition: all 0.3s;  
+    transition: all 0.3s;
 }
 
-.display-none{
+.display-none {
     display: none;
-    animation: opacity 2s ease; 
+    animation: opacity 2s ease;
 }
 
-.waiting{
+.waiting {
     width: 100%;
     position: absolute;
     display: flex;
 }
 
-.waiting .waiting-content{
+.waiting .waiting-content {
     margin: auto;
     padding: 5px 100px;
-    background-color: rgba(10, 24,60, 0.5);
+    background-color: rgba(10, 24, 60, 0.5);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
 
-.waiting .waiting-content img{
+.waiting .waiting-content img {
     height: 16px;
 }
 
-.waiting .waiting-content img, .waiting .waiting-content label{
+.waiting .waiting-content img,
+.waiting .waiting-content label {
     vertical-align: middle;
     color: #eee;
 }
 
-#prod-list{
+#prod-list {
     margin: 2%;
 }
 
-.prod-list-item{
+.prod-list-item {
     box-shadow: 0px 0px 2px #cecece;
     border-radius: 6px;
     overflow: hidden;
@@ -399,36 +406,42 @@ textarea{
     margin: 8px 0px;
 }
 
-.prod-list-item .img{
+.prod-list-item .img {
     width: 120px;
     height: 120px;
     background-color: #cecece;
     flex: 1;
 }
 
-.h-tmp{
-    display: none!important;
+.h-tmp {
+    display: none !important;
 }
 
-.date{
-    flex:0.1;
+.date {
+    flex: 0.1;
     background-color: red;
 }
 
-.text-content{
+.text-content {
     flex: 4;
     margin: 5px;
 }
 
-.info-m{
+.info-m {
     display: flex;
 }
 
-.info{
+.info {
     flex: 1;
     margin: 5px;
 }
 
-.bottom-text-content{
+.bottom-text-content {
     margin: 5px;
+}
+
+@media (max-width: 1220px) {
+    body {
+        padding: 0 30px;
+    }
 }
