Added the easy.js file in project folder for testing

--- a/docs/components/editor.html
+++ b/docs/components/editor.html
@@ -304,7 +304,7 @@
                     '\n<head>' +
                     Editor.tabs() + '\n<meta charset="UTF-8">' +
                     Editor.tabs() + '\n<title>Live Editor page<\/title>' +
-                    Editor.tabs() + '\n<script src="/assets/js/easy.js"><\/script>' +
+                    Editor.tabs() + '\n<script src="assets/js/easy.js"><\/script>' +
                     Editor.tabs() + '\n<style> * { font-family: Arial, Helvetica, sans-serif; } ' +
                     'input, button { border: 1px solid lightgray; border-radius: 3px; } button { padding: 3px 10px; } </style>' +
                     extra +
