--- a/docs/components/main.html
+++ b/docs/components/main.html
@@ -3,7 +3,7 @@
     <div class="main-divider section-space">
         <div class="center-content high-element">
             <div class="main-icon">
-                <img src="/assets/img/main_ico.png">
+                <img src="assets/img/main_ico.png">
             </div>
             <div class="main-text">
                 <p class="high-text"> v2.0.0 </p>
