--- a/docs/components/top.html
+++ b/docs/components/top.html
@@ -4,7 +4,7 @@
     </a>
     <ul>
         <li> <a :href="/tutorial"> Tutorial </a> </li>
-        <li> <a href="/docs.html"> Docs </a> </li>
+        <li> <a href="docs.html"> Docs </a> </li>
         <li> <span class="text"> Translations </span> <span class="fa fa-dot-circle-o dot"></span> </li>
         <li> <span class="text"> Download </span> <span class="fa fa-dot-circle-o dot"></span> </li>
         <li> <a href="https://github.com/AfonsoMatElias/easy" class="fa fa-github"></a> </li>
