Made some improvements on easy.js file, fixed the shorthand e-bind command, and added more content in documentation

--- a/docs/components/tutorial.html
+++ b/docs/components/tutorial.html
@@ -86,7 +86,7 @@
                     <li>IE (11) </li>
                 </ul>
                 <p>
-                    <span class="app-note"> Easy does not suport IE 10 and below. </span>
+                    <span class="note"> Easy does not suport IE 10 and below. </span>
                 </p>
 
                 <h3>Scale of Projects</h3>
