--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Gadugi";
+    src: url(../fonts/gadugi.ttf) format("truetype");
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -22,13 +27,14 @@ h5 {
 :root {
     --easy-yellow: #F0DB4F;
 
+    --note-green: #3bbd418a;
+    --note-yellow: #f0Db4f8a;
+    --note-red: #f150478a;
+
     --color-blue: #51a0d5;
     --color-yellow: #ffbe2f;
     --color-red: #f15047;
     --color-green: #3bbd42;
-
-    --color-trans-red: rgba(241, 80, 71, 0.7);
-    --color-trans-green: rgba(59, 189, 66, 0.7);
 
     --color-light-blue: lightblue;
     --color-light-yellow: khaki;
@@ -40,7 +46,7 @@ h5 {
     --color-menu: #343842;
     --color-menu-darker: #2e323b;
     --color-menu-text-color: #a0a2a8;
-    --color-active: rgb(221, 202, 77);
+    --color-active: #ddca4d;
 }
 
 .light-theme:root {
@@ -549,10 +555,10 @@ nav ul>li:hover {
     margin: 10px 0;
 }
 
-.app-note {
+.note {
     background-color: var(--color-note);
     font-size: 12pt;
-    padding: 3px 6px;
+    padding: 2px 6px;
     border-radius: 3px;
 }
 
@@ -603,18 +609,35 @@ nav ul>li:hover {
 
 .doc-page .doc-presentation .section p,
 .doc-page .doc-presentation .section h1,
-.doc-page .doc-presentation .section h2 .doc-page .doc-presentation .section h3 {
-    margin: 20px 0;
+.doc-page .doc-presentation .section h2,
+.doc-page .doc-presentation .section h3 {
+    margin: 26px 0;
 }
 
 .doc-page .doc-presentation .section {
     color: var(--color-text);
     max-width: 950px;
     border-top: 2px solid var(--color-border);
+    line-height: 28px;
 }
 
 .doc-page .doc-presentation .section:last-child {
     margin-bottom: 50px;
+}
+
+.doc-page .doc-presentation .section ul {
+    list-style: none;
+    margin-left: 2%;
+}
+.doc-page .doc-presentation .section ul li {
+    margin: 10px 0;
+    line-height: 30px;
+}
+
+.doc-page .doc-presentation .section input {
+    border: 1px solid var(--color-border);
+    padding: 4px 10px;
+    border-radius: 4px;
 }
 
 .mark-a {
@@ -631,9 +654,10 @@ nav ul>li:hover {
     cursor: pointer;
 }
 
-pre {
+.result, pre {
     position: relative;
-    max-width: 720px;
+    max-width: 740px;
+    margin: 25px 0;
 }
 
 pre code {
@@ -647,12 +671,28 @@ pre code {
     background-color: var(--color-editor-screen) !important;
 }
 
+.result {
+    overflow-x: auto;
+    font-size: 11.6pt;
+    line-height: 22px;
+    border-radius: 2px;
+    color: var(--color-text);
+    padding-right: 0;
+    background-color: var(--color-soft-transparency);
+}
+
+.result>* {
+    margin: 24px;
+}
+
 pre code * {
     font-family: Consolas, 'Courier New', monospace;
 }
 
-pre code::before {
-    content: "COPY";
+pre code::after, 
+.result::after,
+.block-note::after {
+    content: "Copy";
     font-family: Consolas, 'Courier New', monospace;
     position: absolute;
     top: 0;
@@ -666,6 +706,36 @@ pre code::before {
     font-weight: 600;
     cursor: pointer;
 }
+
+.result::after,
+.block-note::after {
+    content: "Result";
+    cursor: default;
+}
+
+.block-note::after {
+    content: "Note";
+}
+
+.block-note {
+    margin: 30px 0;
+    max-width: 546px;
+    border-radius: 6px;
+    background-color: var(--color-soft-transparency);
+    border: 2px solid transparent;
+    position: relative;
+}
+
+.block-note>*{
+    display: block;
+    margin: 28px 15px!important;
+}
+
+.block-note.info { border-color: var(--note-green); }
+.block-note.warn { border-color: var(--note-yellow); }
+.block-note.dont { border-color: var(--note-red); }
+
+.warn-bg.note { border: 2px solid var(--note-red); }
 
 @media (max-width: 600px) {
     .high-element {
