--- a/docs/components/main.html
+++ b/docs/components/main.html
@@ -8,7 +8,7 @@
             <div class="main-text">
                 <p class="high-text"> v2.0.0 </p>
                 <p class="high-text"> Simpler & Cooler </p>
-                <a href="#" class="high-btn"> Get Started </a>
+                <a href="docs.html" class="high-btn"> Get Started </a>
             </div>
         </div>
     </div>
@@ -57,46 +57,42 @@
     </div>
 
     <div class="main-divider middle-content editor-divider">
-        <div class="center-content">
-            <div class="main-page-editor-container">
-                <div class="description">
-                    <div>
-                        <h2>Hello World Example</h2>
-                        <p>To begin showing some data in the UI is simple
-                            as you can see now...
-                            Some directives can be similar to Vue but, belive me,
-                            there are diferentes by the inside.</p>
-                    </div>
+        <div class="main-page-editor-container">
+            <div class="description">
+                <div>
+                    <h2>Hello World Example</h2>
+                    <p>To begin showing some data in the UI is simple
+                        as you can see now...
+                        Some directives can be similar to Vue but, belive us,
+                        there are diferentes by the inside.</p>
                 </div>
-                <inc src="editor" wait-data="hello-word"></inc>
             </div>
+            <inc src="editor" wait-data="hello-word"></inc>
+        </div>
 
-            <div class="main-page-editor-container">
-                <div class="description">
-                    <div>
-                        <h2>Simple Sum Example</h2>
-                        <p>Let's Two Way Data Bind now...</p>
-                        <p>We are using dynamic data property definition 'e-def'.
-                            In type of bind When some value changes, it updates
-                            the specific field in the element, it means that
-                            your element will be always the same.</p>
-                    </div>
+        <div class="main-page-editor-container">
+            <div class="description">
+                <div>
+                    <h2>Simple Sum Example</h2>
+                    <p>Let's Two Way Data Bind now...</p>
+                    <p>We are using dynamic data property definition 'e-def'.
+                        In type of bind When some value changes, it updates
+                        the specific field in the element, it means that
+                        your element will be always the same.</p>
                 </div>
-                <inc src="editor" wait-data="sum-eg"></inc>
             </div>
+            <inc src="editor" wait-data="sum-eg"></inc>
+        </div>
 
-            <div class="main-page-editor-container">
-                <div class="description">
-                    <div>
-                        <h2>Todo List Example</h2>
-                        <p>Let's make a TODO List App</p>
-                        <p>You can manage your list as you expect</p>
-                    </div>
+        <div class="main-page-editor-container">
+            <div class="description">
+                <div>
+                    <h2>Todo List Example</h2>
+                    <p>Let's make a TODO List App</p>
+                    <p>You can manage your list as you expect</p>
                 </div>
-                <inc src="editor" wait-data="todo-eg"></inc>
             </div>
-
-
+            <inc src="editor" wait-data="todo-eg"></inc>
         </div>
     </div>
 
@@ -104,7 +100,7 @@
         <div class="center-content">
             <div class="main-text">
                 <h3> Want to Learn more? </h3>
-                <a href="#" class="high-btn"> Get Started </a>
+                <a href="docs.html" class="high-btn"> Get Started </a>
             </div>
         </div>
     </div>
